# audioinfo

./: CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci_cd.yml
audioinfo/: __init__.py  main.py
docs/: Makefile
docs/source/: conf.py  index.rst
docs/source/_static/css/: custom.css
docs/source/api/: util.rst
docs/source/reference/: changelog.md  conduct.md  contributing.md
docs/source/usage/: config.rst  configurable_output.rst  install.md  overview.md  ovr.rst  package_layout.md  pipelines.md  related.md
tests/: test_audioinfo.py
